<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RepoItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Columna izquierda: imagen + botones -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/repo_owner_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_gravity="center" />

            <!-- Botones -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageButton
                    android:id="@+id/repo_item_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:tint="@color/uisek_blue"
                    android:contentDescription="Editar repositorio"
                    android:src="@drawable/outline_edit_24" />




                <ImageButton
                    android:id="@+id/repo_item_delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:tint="@color/delete_red"
                    android:contentDescription="Eliminar repositorio"
                    android:src="@drawable/baseline_delete_24" />



            </LinearLayout>

        </LinearLayout>

        <!-- Columna derecha: datos del repositorio -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_name"
                    android:padding="8dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_test"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_description"
                    android:padding="8dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repo_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_test"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_lang"
                    android:padding="8dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/repo_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_lang"
                    android:padding="8dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
